# WhisprMate

./: .dockerignore  .env.example  .gitignore  DOCKER_SUMMARY.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  README.md  app.py  diarize_cli_improved.py  docker-compose.yml  main.py  player.html  pyproject.toml  real_diarized_output.srt  requirements.txt  run_tests.py  summary.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
config/: __init__.py  logging_config.py  settings.py
docs/: AUTHENTICATION.md  DOCKER_DEPLOYMENT.md  DOCKER_TEST_RESULTS.md  LOGGING.md  PROJECT_STRUCTURE.md  README.md  VOLUME_MAPPING.md
docs/architecture/: ARCHITECTURE.md  REFACTORING_SUMMARY.md
docs/development/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md
docs/project/: UI_IMPROVEMENTS.md  plan.md
scripts/: activate_env.sh  build.sh  deploy.sh  deploy_examples.sh  docker-entrypoint.sh  run_app.sh  run_with_custom_auth.sh  run_with_logging.sh  setup_env.sh  test_app.sh  test_docker.sh  test_logging.py  test_setup.sh  test_trim_audio.py  test_volume_mapping.sh  trim_audio.py  trim_audio.sh  validate-docker.sh
src/WhisprMate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/core/: __init__.py  models.py
src/services/: __init__.py  audio_processor.py  auth_service.py  file_manager.py  main.py  transcript_manager.py
src/ui/: __init__.py
src/utils/: helpers.py
templates/: .gitkeep
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  (+1 more)
(+2 files in other folders)
